--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - iQtechway Custom Software Development</title>
+    <title>About - Iqtechway Custom Software Development</title>
     <meta name="description"
         content="We deliver Low-TCO, High-ROI Custom Software Development that solves IT challenges and help you achieve your business vision and goals.">
 
@@ -501,7 +501,7 @@
                 </div>
             </div>
             <div class="about-page-content">
-                <h2>The <span>iQtechway </span> Promise</h2>
+                <h2>The <span>Iqtechway </span> Promise</h2>
 
                 <p>As one of the premier custom software providers in Dallas, Fort Worth, and the DFW metroplex, we
                     firmly believe that our word is our bond. Therefore, our Promise is to get it right or make it
@@ -509,7 +509,7 @@
                     from architecting, designing, developing, hosting, deploying, maintaining, to supporting you
                     throughout the project lifecycle.</p>
 
-                <p>We stand by our promise with the iQtechway A-Z Performance Guarantee and gauge our success based on
+                <p>We stand by our promise with the Iqtechway A-Z Performance Guarantee and gauge our success based on
                     the results we deliver for clients and the trust we earn from the invaluable individuals who entrust
                     us with their mission-critical IT projects.</p>
 
@@ -556,7 +556,7 @@
         <div class="about-coreValues-container container">
             <div class="about-coreValues-title">
                 <h2>Our Core <span>Values</span> </h2>
-                <p>We believe that work is ministry—an expression of our values. Our goal is to perform work that honors our commitments to clients and respects the vitality of iQtechway employees. We define good work as work that delivers meaningful results and evolves clients into lifelong partners.</p>
+                <p>We believe that work is ministry—an expression of our values. Our goal is to perform work that honors our commitments to clients and respects the vitality of Iqtechway employees. We define good work as work that delivers meaningful results and evolves clients into lifelong partners.</p>
             </div>
             <div class="about-coreValues-row row">
                 <div class="col-lg-6 col-md-6 my-lg-3 ">
@@ -632,7 +632,7 @@
                     <p style="font-size: 13px;">Our Clients acknowledge the exceptional value of our low Total Cost of
                         Ownership development approach. We dedicate significant upfront effort to uncover vital
                         requirements - subsequently crafting solutions that are dependable, user-friendly, and
-                        accumulate enduring value year after year at iQtechway.</p>
+                        accumulate enduring value year after year at Iqtechway.</p>
 
                     <div class="homeServices-overlay"></div>
                 </div>
@@ -641,7 +641,7 @@
                         <img src="assets/Images/icons/mobile-app.png" alt="mobile-app">
                     </div>
                     <h5>Delivery</h5>
-                    <p style="font-size: 13px;">We, at iQtechway, implement an agile, iterative approach to define and
+                    <p style="font-size: 13px;">We, at Iqtechway, implement an agile, iterative approach to define and
                         deliver client value in planned increments - utilizing frequent demos and applying learnings
                         from each iteration to craft and deliver precisely what the client wants.</p>
                     <div class="homeServices-overlay"></div>
@@ -652,7 +652,7 @@
                         <img src="assets/Images/icons/web.png" alt="website-development">
                     </div>
                     <h5>Validation</h5>
-                    <p style="font-size: 14px;">The iQtechway Promise is straightforward: We ensure it's right. Period.
+                    <p style="font-size: 14px;">The Iqtechway Promise is straightforward: We ensure it's right. Period.
                         This signifies that you determine whether the solution fulfills the promised utility and value.
                         If we don't meet expectations, we cover the cost to rectify it - not you. Guaranteed.</p>
                     <div class="homeServices-overlay"></div>
@@ -665,7 +665,7 @@
                     <h5>Stewardship</h5>
                     <p style="font-size: 13px;">We perceive ourselves as more than mere developers. We act as stewards
                         of the solutions we deliver to our clients, thereby assuming responsibility for client results
-                        throughout the lifespan of an iQtechway project.</p>
+                        throughout the lifespan of an Iqtechway project.</p>
                     <div class="homeServices-overlay"></div>
 
                 </div>
@@ -678,18 +678,18 @@
     <section class="seo-services-company mb-5">
         <div class="seo-services-container container">
             <div class="seo-serve-title text-start">
-                <h2>The iQtechway <span>Difference</span> </h2>
+                <h2>The Iqtechway <span>Difference</span> </h2>
                 <p>Technical competency, technology expertise, and process mastery are fundamental requirements for
-                    professional software developers. This holds true for iQtechway, as well as other top-tier
-                    development organizations. What distinguishes iQtechway is the application of our core strengths and
+                    professional software developers. This holds true for Iqtechway, as well as other top-tier
+                    development organizations. What distinguishes Iqtechway is the application of our core strengths and
                     values to prioritize serving your interests and achieving your goals—not ours.</p>
                 <p>We are professionals passionate about our work and aware of life's brevity. Consequently, we channel
                     our skills and life force to assist others in achieving meaningful results. This ethos not only
                     yields outcomes and experiences that generate enduring value for our clients but also fosters
-                    lasting goodwill for iQtechway. These serve as the yardsticks of our success, values we hold in
+                    lasting goodwill for Iqtechway. These serve as the yardsticks of our success, values we hold in
                     profound regard. We are discerning about the projects we undertake, committing ourselves
                     wholeheartedly to the select projects and clients we choose to engage with. To them, we pledge to
-                    showcase the iQtechway distinction:</p>
+                    showcase the Iqtechway distinction:</p>
             </div>
             <div class="seo-row mt-5 row">
                 <div class="col-lg-4 col-md-6 px-3 text-start d-flex flex-column align-items-start mb-4">
@@ -708,7 +708,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6 px-3 text-start d-flex flex-column align-items-start mb-4">
-                    <h4 style="color: var(--color); font-size: 20px;">The iQtechway Promise</h4>
+                    <h4 style="color: var(--color); font-size: 20px;">The Iqtechway Promise</h4>
                     <ul>
                         <li style="color: var(--light);">We get it right, We make it right</li>
                         <li style="color: var(--light);">We back it up with our A-Z guarantee</li>
@@ -783,7 +783,7 @@
                         <h2>We Learn</h2>
                         <div class="seo-text-boxs">
                             <h3>Grow and Innovate</h3>
-                            <p style="font-size: 13px; text-align: justify;">We are committed to the professional and personal growth of each team member at iQtechway. We firmly believe that growth occurs when we challenge ourselves to perform at our individual and collective best in service to others - our clients, our teammates, and our communities. We hold the belief that the bedrock of genuine innovation lies in the relentless pursuit of Excellence in Service.</p>
+                            <p style="font-size: 13px; text-align: justify;">We are committed to the professional and personal growth of each team member at Iqtechway. We firmly believe that growth occurs when we challenge ourselves to perform at our individual and collective best in service to others - our clients, our teammates, and our communities. We hold the belief that the bedrock of genuine innovation lies in the relentless pursuit of Excellence in Service.</p>
                         </div>
                         
                     </div>
@@ -802,7 +802,7 @@
         <div class="about-mission-container container">
             <div class="about-mission-title">
                 <h2>Our <span>Vision</span> & <span>Mission</span></h2>
-                <p>iQtechway is a known software company that focuses on helping other organizations transition, to operations. Our main goal is to improve and become a leading player in the field of Information Technology. We are committed, to optimizing our customers business processes by creating high quality solutions that enable their business growth and unlock their potential.</p>
+                <p>Iqtechway is a known software company that focuses on helping other organizations transition, to operations. Our main goal is to improve and become a leading player in the field of Information Technology. We are committed, to optimizing our customers business processes by creating high quality solutions that enable their business growth and unlock their potential.</p>
             </div>
             <div class="about-mission-row row">
                 <div class="about-mission-boxs col-lg-6 col-md-6 my-4 px-lg-4">
@@ -833,7 +833,7 @@
     <!-- <section class="next-big-tech">
         <div class="next-big-title container">
             <h5>IQ TECHWAY TEAM</h5>
-            <h2>Meet <span>iQtechway </span> Team</h2>
+            <h2>Meet <span>Iqtechway </span> Team</h2>
             <p>We have in-house of expert Designers, Developers, testers, Digital Marketeer, Business Analysts, Business Development Managers, and Project Managers. They are well versed in their respective field and technologies. Our team has the required skills and great communication skills to match all client requirements.</p>
         </div>
 
