--- a/ai-machine-learning.html
+++ b/ai-machine-learning.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
     <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -641,7 +641,7 @@
         <div class="professional-container1 container">
             <h2 class="mb-4 ">Our AI Services And <span>Solutions</span> </h2>
             <h3 style="color: var(--color);">Machine Learning </h3>
-            <p>Iq Techway’s machine learning and artificial intelligence (AI) solutions swiftly access the granular,
+            <p>Iqtechway’s machine learning and artificial intelligence (AI) solutions swiftly access the granular,
                 low-latency data that contains the insights you're looking for. We streamline model construction by
                 delivering transparency and automation so more time can be spent studying and results can be believed.
                 Our no-code method allows you to configure and tune models in whatever way you want, giving you complete
@@ -677,7 +677,7 @@
                 </h2>
 
                 <p>Automate & Augment your business operations with future-ready ML Solutions</p>
-                <p>Iq Techwaydelivers the best ML services and solutions that help every industry stay ahead of the
+                <p>Iqtechwaydelivers the best ML services and solutions that help every industry stay ahead of the
                     competition.
 
                 </p>
@@ -717,7 +717,7 @@
                     </div>
                     <h5>ML-enabled Financial Services </h5>
                     <p style="font-size: 13px; text-align: start;">To create outstanding Fintech solutions for our
-                        clients, Iq TechwayAI/ML experts build an intelligent solution that prevents fraud, predicts
+                        clients, IqtechwayAI/ML experts build an intelligent solution that prevents fraud, predicts
                         future
                         profits, and boosts productivity.</p>
 
@@ -757,7 +757,7 @@
                     </div>
                     <h5>Natural Language Processing (NLP) </h5>
                     <p style="font-size: 13px;  text-align: start;">Be it Chabot application development, or an app to
-                        interpret user speech, or an app to measure sentiments of user’s feedback, Iq Techwaymeets your
+                        interpret user speech, or an app to measure sentiments of user’s feedback, Iqtechwaymeets your
                         needs. Our ML developers with best practices create the best NLP solution for your business.
                     <div class="homeServices-overlay"></div>
 
@@ -835,7 +835,7 @@
 
     <div class="research-title container mb-5">
         <h2>We are #1 Artificial Intelligence <span>Company in coimbatore</span> </h2>
-        <p>Welcome to Iq Techway, We are a leading AI solutions company in Coimbatore, providing cutting-edge AI
+        <p>Welcome to Iqtechway, We are a leading AI solutions company in Coimbatore, providing cutting-edge AI
             technology and services to businesses across a wide range of industries.</p>
         <p>As an AI solutions company, we understand the importance of staying ahead of the curve in this rapidly
             evolving field. We invest heavily in research and development to ensure that we are always at the forefront
