--- a/android-app.html
+++ b/android-app.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Android App Development Company - IQ Techway</title>
+    <title>Android App Development Company - Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
     <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -483,7 +483,7 @@
 
     <div class="research-title mb-5">
         <h2>Android App <span>development Company</span> </h2>
-        <p>Welcome to iQtechway, where innovation meets functionality in the dynamic world of Android app development.
+        <p>Welcome to Iqtechway, where innovation meets functionality in the dynamic world of Android app development.
         </p>
     </div>
 
@@ -683,7 +683,7 @@
                         <img src="assets/Images/icons/software.png" alt="software-development">
                     </div>
                     <h5>Android Wearable</h5>
-                    <p>Customizable features designed as per the small screen, iQtechway is a Top Android App Development
+                    <p>Customizable features designed as per the small screen, Iqtechway is a Top Android App Development
                         Company providing amazing apps or smart fitness bands, and much more under this category.</p>
 
                     <div class="homeServices-overlay"></div>
@@ -726,7 +726,7 @@
         <div class="technologies-overlay2"></div>
         <div class="next-big-title1 container">
             <h2>Development <span>Process </span> </h2>
-            <p>A reliable android application development company, iQtechway supervises the entire development process to
+            <p>A reliable android application development company, Iqtechway supervises the entire development process to
                 attain client satisfaction. The method includes research, design, development, management, security,
                 testing, fixing, and publishing the application. This is followed by the post-deployment services, which
                 include; bug fixing, updates, and modifications as per demand at the best price.</p>
@@ -852,7 +852,7 @@
                 </div>
                 <div class="research-content-boxs">
                     <h5>USING TRENDING TECHNOLOGIES</h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
@@ -1056,11 +1056,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose iQtechway for Android App Development? </span>
+                    <span> Why choose Iqtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    iQtechway is the leading Android App Development Company that cares about the clients and their
+                    Iqtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
