--- a/brand-startegies.html
+++ b/brand-startegies.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -477,7 +477,7 @@
 
     <div class="research-title mb-5">
         <h2>Brand Strategies <span>Service</span> </h2>
-        <p>Welcome to iQtechway, where we specialize in crafting innovative and impactful brand strategies that drive growth and foster lasting connections with your audience. </p>
+        <p>Welcome to Iqtechway, where we specialize in crafting innovative and impactful brand strategies that drive growth and foster lasting connections with your audience. </p>
     </div>
 
     <!-- About Section Start -->
@@ -722,7 +722,7 @@
                 <div class="research-content-boxs">
                     <h5>REDUCE COSTS
                     </h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
