--- a/case-studies-link.html
+++ b/case-studies-link.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -706,11 +706,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose iQtechway for Android App Development? </span>
+                    <span> Why choose Iqtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    iQtechway is the leading Android App Development Company that cares about the clients and their
+                    Iqtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
