--- a/cloud-app.html
+++ b/cloud-app.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
     <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -494,7 +494,7 @@
                     application development services.</p>
 
 
-                <p>Iq Techway is the right cloud application development company for your business to guide in selecting
+                <p>Iqtechway is the right cloud application development company for your business to guide in selecting
                     the right cloud computing model; Public, Private and Hybrid cloud, that offers better experience in
                     cloud application platforms.</p>
 
@@ -656,7 +656,7 @@
             <div class="homeServices-title">
                 <h2>Scale your Business With Cloud Application <br> <span>Development Services</span></span>
                 </h2>
-                <p>Iq Techway Information systems is the top cloud application development company in India with over
+                <p>Iqtechway Information systems is the top cloud application development company in India with over
                     15+ years of experience in the IT industry. We have highly certified cloud developers to offer best
                     in class cloud application development services to businesses globally. </p>
             </div>
@@ -679,7 +679,7 @@
                         <img src="assets/Images/icons/mobile-app.png" alt="mobile-app">
                     </div>
                     <h5>Staff Augmentation</h5>
-                    <p style="font-size: 13px; text-align: start;">Hiring cloud engineers from Iq Techway information
+                    <p style="font-size: 13px; text-align: start;">Hiring cloud engineers from Iqtechway information
                         systems to increase your team productivity as well as save your team from the difficulty in
                         managing the cloud & help your business to scale-up, upgrade delivery quality in the market.
                     </p>
@@ -694,7 +694,7 @@
                         <img src="assets/Images/icons/web.png" alt="website-development">
                     </div>
                     <h5>Hire Cloud App Developers </h5>
-                    <p style="font-size: 13px; text-align: start;"> At Iq Techway information systems we provide an
+                    <p style="font-size: 13px; text-align: start;"> At Iqtechway information systems we provide an
                         opportunity for business to hire cloud app developers who can deliver scalable, portable,as well
                         as secure containerized cloud applications (including based on services/microservices).</p>
 
@@ -720,7 +720,7 @@
         <div class="staff-services-container container">
             <div class="staff-services-title">
                 <h2>Our Cloud <span>Services</span> </h2>
-                <p>At Iq Techway information systems we provide end to end cloud solutions for businesses all across the
+                <p>At Iqtechway information systems we provide end to end cloud solutions for businesses all across the
                     globe and grow business in a competitive market. Our cloud solutions cover every phase of cloud
                     application adoption; Cloud app consulting, cloud application development & testing, cloud
                     application security services, cloud app integration with other cloud & on-premises apps, cloud app
@@ -778,7 +778,7 @@
                 <div class="staff-services-box">
                     <span>08</span>
                     <h5>Cloud Support and Maintenance</h5>
-                    <p>At Iq Techway we have a highly dedicated IT support staff for your project in order to manage &
+                    <p>At Iqtechway we have a highly dedicated IT support staff for your project in order to manage &
                         monitor your cloud application and provide continuous support and maintenance services.</p>
                 </div>
 
@@ -794,9 +794,9 @@
     <section class="Development-Services">
         <div class="Development-container container">
             <div class="Development-title">
-                <h2>Iq Techway: Right Choice for <span>Cloud Applications Development</span>
+                <h2>Iqtechway: Right Choice for <span>Cloud Applications Development</span>
                 </h2>
-                <p>Iq Techway information systems’ cloud application development services are designed to satisfy the
+                <p>Iqtechway information systems’ cloud application development services are designed to satisfy the
                     business by meeting their cloud requirements as per their expectations in a competitive market.
                     Below are the benefits you get when you go with our cloud application solutions.</p>
             </div>
@@ -806,7 +806,7 @@
                         <i class="fa-solid fa-check fa-2xl"></i>
                     </div>
                     <h5>100% Transparency </h5>
-                    <p>At Iq Techway our cloud application development services are 100% transparency and maintain a
+                    <p>At Iqtechway our cloud application development services are 100% transparency and maintain a
                         better trust with clients to fulfill their requirements.</p>
                 </div>
                 <div class="Development-boxs">
@@ -846,7 +846,7 @@
                         <i class="fa-solid fa-check fa-2xl"></i>
                     </div>
                     <h5>Ensured Security</h5>
-                    <p>At Iq Techway we ensure that our clients information and software components are secure and
+                    <p>At Iqtechway we ensure that our clients information and software components are secure and
                         protected with our best security practices. </p>
                 </div>
                 <div class="Development-boxs">
@@ -854,7 +854,7 @@
                         <i class="fa-solid fa-check fa-2xl"></i>
                     </div>
                     <h5>Affordable Rates</h5>
-                    <p>At Iq Techway our aim is to serve all sizes of businesses from small startups to big enterprises,
+                    <p>At Iqtechway our aim is to serve all sizes of businesses from small startups to big enterprises,
                         our affordable cloud application solutions will help businesses to leverage the power of cloud
                         to grow. </p>
                 </div>
@@ -863,7 +863,7 @@
                         <i class="fa-solid fa-check fa-2xl"></i>
                     </div>
                     <h5>Flexible Engagement Models</h5>
-                    <p>At Iq Techway our engagement models are more flexible such as hourly, fixed rate, or monthly
+                    <p>At Iqtechway our engagement models are more flexible such as hourly, fixed rate, or monthly
                         basis. You can hire cloud developers from us according to your business needs.</p>
                 </div>
 
@@ -897,7 +897,7 @@
                 <div class="research-content-boxs">
                     <h5>REDUCE TIME AND COSTS
                     </h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
