--- a/cloud-solutions.html
+++ b/cloud-solutions.html
@@ -552,7 +552,7 @@
         <div class="banner-section">
             <span class="since">Since 2019</span>
             <h1>End-to-End Cloud Computing <span> Solutions</span></h1>
-            <p>Iq Techway as a leading cloud computing services provider company with expertise in SaaS, PaaS, and IaaS, is helping organizations harness the potential of cloud and maximize business value. Be it smooth cloud migration, secure cloud-native solutions, or future-proof scalable solutions, our seasoned cloud experts deliver all with precision.</p>
+            <p>Iqtechway as a leading cloud computing services provider company with expertise in SaaS, PaaS, and IaaS, is helping organizations harness the potential of cloud and maximize business value. Be it smooth cloud migration, secure cloud-native solutions, or future-proof scalable solutions, our seasoned cloud experts deliver all with precision.</p>
             <span class="del"><a href="index.html">Home </a> > End-to-End Cloud Computing Solutions</span>
 
         </div>
@@ -874,7 +874,7 @@
         <div class="hire-choosing-container container">
             <div class="hire-choosing-title">
                 <h2>Why Choose Iq <span>Techway</span></h2>
-                <p>At iQtechway, we believe in innovation that shapes the future. Established with a vision to empower businesses and individuals through cutting-edge technology, we are a pioneering force in the realm of digital solutions.</p>
+                <p>At Iqtechway, we believe in innovation that shapes the future. Established with a vision to empower businesses and individuals through cutting-edge technology, we are a pioneering force in the realm of digital solutions.</p>
             </div>
             <div class="hireChoose-box-container">
                 <div class="hireChoose-box">
