--- a/crm-development.html
+++ b/crm-development.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
     <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -475,7 +475,7 @@
         <div class="our-solutions-container container">
             <div class="our-solutions-content">
                 <h2>Experience innovation with <span>IQ Tech</span> </h2>
-                <p>Looking for CRM software solutions? iQtechway is the top rated CRM software solutions company offering
+                <p>Looking for CRM software solutions? Iqtechway is the top rated CRM software solutions company offering
                     world class CRM services to businesses of every size from small startups to big enterprises. Our <a
                         href="#">CRM software development</a> solutions enable businesses to stay connected with
                     customers as well as document every interaction effectively.
@@ -659,7 +659,7 @@
                         <img src="assets/Images/common2/icon-1.png" alt="software-development">
                     </div>
                     <h5>CRM Experts Team</h5>
-                    <p>At iQtechway we have a highly dedicated CRM experts team who have full expertise in latest
+                    <p>At Iqtechway we have a highly dedicated CRM experts team who have full expertise in latest
                         technologies and tools as well as understands your business vision and work on the challenges of
                         the project to fulfill your project requirements</p>
 
@@ -671,7 +671,7 @@
                     </div>
                     <h5>Staff Augmentation</h5>
                     <p>If you need additional resources for your CRM software solutions project to enhance the
-                        productivity, Get a highly experienced CRM developers team from iQtechway at the best rates.</p>
+                        productivity, Get a highly experienced CRM developers team from Iqtechway at the best rates.</p>
                     <div class="homeServices-overlay"></div>
 
                 </div>
@@ -774,7 +774,7 @@
                 <div class="research-content-boxs">
                     <h5>IMPROVED CUSTOMER RETENTION
                     </h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
