--- a/cross-mobile-development.html
+++ b/cross-mobile-development.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
     <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -481,7 +481,7 @@
 
     <div class="research-title mb-5">
         <h2><span>Cross-platform</span> mobile development </h2>
-        <p>iQtechway is at the forefront of revolutionizing cross-platform development, offering innovative solutions that transcend traditional boundaries. </p>
+        <p>Iqtechway is at the forefront of revolutionizing cross-platform development, offering innovative solutions that transcend traditional boundaries. </p>
     </div>
 
 
@@ -704,7 +704,7 @@
                 is this infrastructure that makes us the best <a href="#">iPhone app development company in India.</a>
             </p>
 
-            <p>Connect with us for a range of consumer and enterprise applications. <a href="#"></a>iQtechway </a> , an
+            <p>Connect with us for a range of consumer and enterprise applications. <a href="#"></a>Iqtechway </a> , an
                 <a href="#">Cross-platform app development company in India</a> caters to a plethora of demands and app
                 flavors,
                 and dimensions, irrespective of industry verticals or end-use.
@@ -738,25 +738,25 @@
                 </div>
                 <div class="research-content-boxs">
                     <h5>EASY UPGRADES</h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
 
                 <div class="research-content-boxs">
                     <h5>FAST LAUNCH</h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
 
                 <div class="research-content-boxs">
                     <h5>MODULARITY</h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
 
                 <div class="research-content-boxs">
                     <h5>HIGH COMPETITIVENESS</h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
 
@@ -954,11 +954,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose iQtechway for Android App Development? </span>
+                    <span> Why choose Iqtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    iQtechway is the leading Android App Development Company that cares about the clients and their
+                    Iqtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
