--- a/devOps-solutions.html
+++ b/devOps-solutions.html
@@ -553,7 +553,7 @@
         <div class="banner-section">
             <span class="since">Since 2019</span>
             <h1>End-to-End DevOps <span> Solutions</span></h1>
-            <p>Iq Techway is a hub of skilled DevOps engineers, transforming the software development lifecycle to
+            <p>Iqtechway is a hub of skilled DevOps engineers, transforming the software development lifecycle to
                 quickly release software products without compromising on performance and security. Leave all your
                 software development worries on us by subscribing to our managed DevOps services.</p>
             <span class="del"><a href="index.html">Home </a> > End-to-End DevOps Solutions</span>
@@ -711,7 +711,7 @@
         <div class="mini-industries-container container">
             <h2>Looking to Harmonize and Speed Up Your <br>
                 Digital Product Development Project?</h2>
-            <p>Iq Techway can help you with that! Reach out to our team and find out how DevOps can revolutionize your
+            <p>Iqtechway can help you with that! Reach out to our team and find out how DevOps can revolutionize your
                 software development and deployment processes.</p>
             <a href="contact.html" class="btn">
                 <span class="btn-1"></span>
@@ -902,7 +902,7 @@
         <div class="hire-choosing-container container">
             <div class="hire-choosing-title">
                 <h2>Why Choose Iq <span>Techway</span></h2>
-                <p>At iQtechway, we believe in innovation that shapes the future. Established with a vision to empower businesses and individuals through cutting-edge technology, we are a pioneering force in the realm of digital solutions.</p>
+                <p>At Iqtechway, we believe in innovation that shapes the future. Established with a vision to empower businesses and individuals through cutting-edge technology, we are a pioneering force in the realm of digital solutions.</p>
             </div>
             <div class="hireChoose-box-container">
                 <div class="hireChoose-box">
