--- a/dotNet.html
+++ b/dotNet.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -463,7 +463,7 @@
 
     <div class="research-title mb-5">
         <h2>.Net development <span>Service</span> </h2>
-        <p>iQtechway is a leading-edge .Net development company dedicated to crafting cutting-edge software solutions that empower businesses to thrive in the digital landscape.</p>
+        <p>Iqtechway is a leading-edge .Net development company dedicated to crafting cutting-edge software solutions that empower businesses to thrive in the digital landscape.</p>
     </div>
 
     
@@ -780,7 +780,7 @@
                 <div class="research-content-boxs">
                     <h5>INTEGRATION WITH LEGAL SYSTEMS
                     </h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
@@ -979,11 +979,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose iQtechway for Android App Development? </span>
+                    <span> Why choose Iqtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    iQtechway is the leading Android App Development Company that cares about the clients and their
+                    Iqtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
