--- a/enterprise-mobility.html
+++ b/enterprise-mobility.html
@@ -551,7 +551,7 @@
         <div class="banner-section">
             <span class="since">Since 2019</span>
             <h1>Top Enterprise App  <span> Development Company</span></h1>
-            <p>Redefine the way your business entity works with our proposed end-to-end enterprise mobility solution. Iq Techway, as a leading company of software engineers, strives to deliver highly customized enterprise mobility solutions for your modern business to succeed.</p>
+            <p>Redefine the way your business entity works with our proposed end-to-end enterprise mobility solution. Iqtechway, as a leading company of software engineers, strives to deliver highly customized enterprise mobility solutions for your modern business to succeed.</p>
             <span class="del"><a href="index.html">Home </a> > Top Enterprise App Development Company</span>
 
         </div>
@@ -619,7 +619,7 @@
                         <img src="assets/Images/icons/web.png" alt="website-development">
                     </div>
                     <h5>Mobile Application Migration</h5>
-                    <p style="font-size: 13px; text-align: start;">Be it migrating your legacy enterprise system to the mobile app or migrating native app development to cross-platform development or vice versa - Iq Techway is your ideal app migration partner.</p>
+                    <p style="font-size: 13px; text-align: start;">Be it migrating your legacy enterprise system to the mobile app or migrating native app development to cross-platform development or vice versa - Iqtechway is your ideal app migration partner.</p>
 
                     <div class="homeServices-overlay"></div>
 
@@ -842,7 +842,7 @@
         <div class="hire-choosing-container container">
             <div class="hire-choosing-title">
                 <h2>Why Choose Iq <span>Techway</span></h2>
-                <p>At iQtechway, we believe in innovation that shapes the future. Established with a vision to empower businesses and individuals through cutting-edge technology, we are a pioneering force in the realm of digital solutions.</p>
+                <p>At Iqtechway, we believe in innovation that shapes the future. Established with a vision to empower businesses and individuals through cutting-edge technology, we are a pioneering force in the realm of digital solutions.</p>
             </div>
             <div class="hireChoose-box-container">
                 <div class="hireChoose-box">
