--- a/frontend.html
+++ b/frontend.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
     <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -468,7 +468,7 @@
 
     <div class="research-title mb-5">
         <h2>Frontend <span>Development</span> </h2>
-        <p>At iQtechway, we redefine digital interactions through cutting-edge frontend development solutions.</p>
+        <p>At Iqtechway, we redefine digital interactions through cutting-edge frontend development solutions.</p>
     </div>
 
 
@@ -477,8 +477,8 @@
         <div class="technologies-overlay2"></div>
         <div class="our-solutions-container container">
             <div class="our-solutions-content">
-                <h2>Welcome to IQ Techway: <span>Transforming Ideas into Exceptional Frontend Experiences</span> </h2>
-                <p>At iQtechway, we specialize in crafting captivating frontend solutions that elevate user experiences
+                <h2>Welcome to Iqtechway: <span>Transforming Ideas into Exceptional Frontend Experiences</span> </h2>
+                <p>At Iqtechway, we specialize in crafting captivating frontend solutions that elevate user experiences
                     to new heights. With a team of seasoned developers, designers, and innovators, we transform your
                     visions into stunning, intuitive interfaces that captivate audiences and drive success.</p>
 
@@ -702,7 +702,7 @@
         <div class="industries-container-1 container">
             <div class="industries-title">
                 <h2>Website design services <span> we offer</span></h2>
-                <p>At iQtechway, we redefine digital interactions through cutting-edge frontend development solutions.</p>
+                <p>At Iqtechway, we redefine digital interactions through cutting-edge frontend development solutions.</p>
                 <div class="industries-title-overlay"></div>
             </div>
             <div class="industries-box-container-1">
@@ -897,7 +897,7 @@
                 <div class="research-content-boxs">
                     <h5>HIGH-SCALABLE APPS
                     </h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
@@ -1102,11 +1102,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose iQtechway for Android App Development? </span>
+                    <span> Why choose Iqtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    iQtechway is the leading Android App Development Company that cares about the clients and their
+                    Iqtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
