--- a/hire-flutter-developer.html
+++ b/hire-flutter-developer.html
@@ -462,7 +462,7 @@
 
     <div class="research-title mb-5">
         <h2>Hire Flutter <span>Developers</span> </h2>
-        <p>At iQtechway, we're committed to delivering top-tier Flutter development services that transcend the ordinary.</p>
+        <p>At Iqtechway, we're committed to delivering top-tier Flutter development services that transcend the ordinary.</p>
     </div>
 
 
@@ -485,7 +485,7 @@
                 <p>When you hire Flutter developers in India from IQ Tech, you get total control over agile experts
                     while we handle onboarding, infrastructure, administrative, legal, and project support.</p>
 
-                <p> Hire Flutter App developers for Start-up from iQtechway to harness the benefits of this increasingly
+                <p> Hire Flutter App developers for Start-up from Iqtechway to harness the benefits of this increasingly
                     popular platform and achieve the unimaginable.</p>
 
                 <h2>Hire Us For Your <span>Flutter Developers</span> On</h2>
@@ -719,7 +719,7 @@
         <div class="Development-container container">
             <div class="Development-title">
                 <h2>Why Hire <span>Flutter Developers India </span>From IQ Tech? </h2>
-                <p>iQtechway provides credible, skilled remote Flutter developers to boost your company’s growth and ROI.
+                <p>Iqtechway provides credible, skilled remote Flutter developers to boost your company’s growth and ROI.
                     We are a reputable flutter app development company in India that is aware of current trends and
                     technologies. We strive to create a smooth flutter application for organizing ass sizes and shapes.
                 </p>
