--- a/hire-laravel-developer.html
+++ b/hire-laravel-developer.html
@@ -462,7 +462,7 @@
 
     <div class="research-title mb-5">
         <h2>Hire Laravel <span>Developers</span> </h2>
-        <p>At iQtechway, we are pioneers in leveraging innovative technologies to deliver cutting-edge solutions for our global clientele.</p>
+        <p>At Iqtechway, we are pioneers in leveraging innovative technologies to deliver cutting-edge solutions for our global clientele.</p>
     </div>
 
 
@@ -480,10 +480,10 @@
                     that is capable of justifying your brand value. Laravel framework is feature-packed and is loaded
                     with tons of functionalities and customization options.</p>
                 <p>But you will get the aforementioned benefits only if you hire laravel developer like IQ Tech. We at
-                    iQtechway have seasoned ourselves as per the requirements of laravel. Our laravel developers are well
+                    Iqtechway have seasoned ourselves as per the requirements of laravel. Our laravel developers are well
                     aware of all the functionalities and can deliver you with an astounding web project.</p>
 
-                <p>iQtechway has attained the right balance between best-in-class services and affordability. When you
+                <p>Iqtechway has attained the right balance between best-in-class services and affordability. When you
                     appoint us as your laravel developer, we bestow our best fleet of services to stand on your
                     expectations. Our teams work with you hand to hand in order to deliver you with unmatchable web
                     solutions.</p>
@@ -636,7 +636,7 @@
         <div class="homeServices-container container">
 
             <div class="homeServices-title">
-                <h2>iQtechway Renders World-Class <span>Laravel Development</span>Services</h2>
+                <h2>Iqtechway Renders World-Class <span>Laravel Development</span>Services</h2>
                 <p>We take the pride of delivering high-end services to more than hundreds of clients. Till date, we
                     have worked on a myriad of projects and made sure to invest our 100% efforts. We deliver:
                 </p>
@@ -673,7 +673,7 @@
                         Laravel Ecommerce Development </h5>
                     <p>Ecommerce platforms are thriving at a rapid pace and it has become imperative to get your website
                         developed in the most unique way with advanced framework and scripting language. Hire laravel
-                        developer from India with iQtechway and get the most dexterous developers who have deep
+                        developer from India with Iqtechway and get the most dexterous developers who have deep
                         proficiency in ecommerce development.</p>
                     <div class="homeServices-overlay"></div>
 
@@ -697,7 +697,7 @@
                     </div>
                     <h5>
                         Laravel API Development </h5>
-                    <p>Customized API can make or break the game. Get in touch with iQtechway to hire laravel programmer
+                    <p>Customized API can make or break the game. Get in touch with Iqtechway to hire laravel programmer
                         India. And we will fulfill our promise to deliver you with the most advanced and purposely built
                         APIs that are capable of embracing the website interface.</p>
                     <div class="homeServices-overlay"></div>
@@ -709,7 +709,7 @@
                     </div>
                     <h5>
                         Laravel Cloud Solutions </h5>
-                    <p>Cloud is the need of every service and that’s the reason why iQtechway is a superlative choice of
+                    <p>Cloud is the need of every service and that’s the reason why Iqtechway is a superlative choice of
                         every business. We have an in-depth knowledge in SaaS, PaaS, IaaS, and other backend cloud
                         solutions that are associated with laravel.</p>
                     <div class="homeServices-overlay"></div>
@@ -731,8 +731,8 @@
 
         <div class="Development-container container">
             <div class="Development-title">
-                <h2>Hire <span>Laravel Programmer </span> India At iQtechway And Get The Following Benefits </h2>
-                <p>Having iQtechway as your laravel development company has a plethora of benefits which cannot be matched
+                <h2>Hire <span>Laravel Programmer </span> India At Iqtechway And Get The Following Benefits </h2>
+                <p>Having Iqtechway as your laravel development company has a plethora of benefits which cannot be matched
                     at the price range we offer. Here is a glimpse of some irresistible and convincing benefits that
                     will surely make you to have us at your side.
                 </p>
@@ -754,7 +754,7 @@
                         <i class="fa-solid fa-check fa-2xl"></i>
                     </div>
                     <h5>Excellent Solutions</h5>
-                    <p>Hire laravel development company- iQtechway and get excellent solutions for all types of laravel
+                    <p>Hire laravel development company- Iqtechway and get excellent solutions for all types of laravel
                         website complexities. Our teams can design bespoke solutions for you while fabricating a new
                         website. In case you are looking for someone who can take over your existing project, then we
                         are the best choice.</p>
@@ -765,7 +765,7 @@
                     </div>
                     <h5>Continual Improvisations</h5>
                     <p>Every project needs continuous improvisations in order to sustain the technology advancements and
-                        that is what we take care of. Laravel experts at iQtechway promise continual improvisations with
+                        that is what we take care of. Laravel experts at Iqtechway promise continual improvisations with
                         the latest and newly introduced laravel features. Once you have opted for a web development
                         package or any web services, our teams start working and improvising your web project.</p>
                 </div>
@@ -774,7 +774,7 @@
                         <i class="fa-solid fa-check fa-2xl"></i>
                     </div>
                     <h5>Personalized Approach</h5>
-                    <p>iQtechway follows a personalized approach in the whole process of web development using laravel
+                    <p>Iqtechway follows a personalized approach in the whole process of web development using laravel
                         framework. For every single project, a list of approaches is designed and deployed accordingly.
                         Once our teams review about your needs and requirements, then we stick to the project and start
                         developing it with our bespoke and personalized approaches.</p>
