--- a/hire-magento-developer.html
+++ b/hire-magento-developer.html
@@ -460,7 +460,7 @@
 
     <div class="research-title mb-5">
         <h2>Hire Dedicated <span>Magento Developers</span> </h2>
-        <p>At iQtechway, we are a dynamic team of highly skilled and innovative Magento developers dedicated to revolutionizing your online presence. </p>
+        <p>At Iqtechway, we are a dynamic team of highly skilled and innovative Magento developers dedicated to revolutionizing your online presence. </p>
     </div>
 
 
@@ -474,7 +474,7 @@
                     rewarding business. The booming pace to hire Magento developers is skyrocketing and companies across
                     the globe are searching for a partner who promises sure-shot panaceas to their diversified business
                     complexities.</p>
-                <p>iQtechway is a veteran organization that is readily available to assist companies across India, USA,
+                <p>Iqtechway is a veteran organization that is readily available to assist companies across India, USA,
                     UK, Ukraine, Dubai, Germany, and Canada and other parts of the world. Who are looking for hire
                     magento developer in india.</p>
                 <p>Apart from the convenient process to hire dedicated Magento developer India, we also proffer our
@@ -630,7 +630,7 @@
         <div class="homeServices-container container">
 
             <div class="homeServices-title">
-                <h2>iQtechway Is The Best Place To <span>Hire Reliable Magento Developers</span></h2>
+                <h2>Iqtechway Is The Best Place To <span>Hire Reliable Magento Developers</span></h2>
                 <p>Hiring us as your Magento developer will assist you in attaining a cutting-edge over your business
                     contraries. Also, we provide specialized Magento services that are designed just for your business.
                     Below mentioned are some rock-strong benefits that you will be amused with once we are at your side.
@@ -665,7 +665,7 @@
                     </div>
                     <h5>Magento Migration Services</h5>
                     <p>If you are looking to migrate to Magento, then it’s a good decision. You can make it the best by
-                        having iQtechway at your side. We have the right know-how to help you in migration to Magento
+                        having Iqtechway at your side. We have the right know-how to help you in migration to Magento
                         platform.</p>
                     <div class="homeServices-overlay"></div>
 
@@ -686,7 +686,7 @@
                         <img src="assets/Images/Hire-flutter/5.png" alt="mobile-app">
                     </div>
                     <h5>Unmatched Development of Magento Extensions</h5>
-                    <p>iQtechway is enriched with multiyear proficiency in Magento and we are well aware of all the
+                    <p>Iqtechway is enriched with multiyear proficiency in Magento and we are well aware of all the
                         standards Magento holds. We can support you with comprehensive customization and creation of
                         peculiar Magento extensions.</p>
                     <div class="homeServices-overlay"></div>
@@ -698,7 +698,7 @@
                     </div>
                     <h5>Shopping Cart Embellishment and Development</h5>
                     <p>A shopping cart is the utmost need of every eStore and it should look and perform up to the mark.
-                        iQtechway has founded its feet in the designing of breathtaking shopping carts that are loaded
+                        Iqtechway has founded its feet in the designing of breathtaking shopping carts that are loaded
                         with immense functionalities and are user-friendly.</p>
                     <div class="homeServices-overlay"></div>
 
@@ -719,8 +719,8 @@
 
         <div class="Development-container container">
             <div class="Development-title">
-                <h2>The Swift Process Of <span>Hiring Magento Developers </span> At iQtechway </h2>
-                <p>We at iQtechway follow a unique, yet simple roadmap for the ultimate success of your business. You
+                <h2>The Swift Process Of <span>Hiring Magento Developers </span> At Iqtechway </h2>
+                <p>We at Iqtechway follow a unique, yet simple roadmap for the ultimate success of your business. You
                     don’t need to go through complex formalities and wait for a certain longer time period to get your
                     work done with us.
                 </p>
@@ -731,7 +731,7 @@
                         <i class="fa-solid fa-check fa-2xl"></i>
                     </div>
                     <h5>Ping us for a Detailed Consultation</h5>
-                    <p>iQtechway strongly believes that it’s better to understand your needs and listen to them carefully
+                    <p>Iqtechway strongly believes that it’s better to understand your needs and listen to them carefully
                         before taking any step. We are available through multiple communication channels for your ease
                         and convenience.</p>
                 </div>
