--- a/hire-php-developer.html
+++ b/hire-php-developer.html
@@ -464,7 +464,7 @@
 
     <div class="research-title mb-5">
         <h2>Hire <span> PHP Developers</span> </h2>
-        <p>At iQtechway, our team of seasoned PHP developers possesses a blend of expertise and creativity, enabling us to create bespoke applications, robust websites, and intricate systems tailored to your unique needs.</p>
+        <p>At Iqtechway, our team of seasoned PHP developers possesses a blend of expertise and creativity, enabling us to create bespoke applications, robust websites, and intricate systems tailored to your unique needs.</p>
     </div>
 
 
@@ -479,11 +479,11 @@
                     WordPress developer onboard who is equally proficient and dexterous, is a sure-shot way to climb the
                     staircase of huge business success.
                 </p>
-                <p>iQtechway completely admits with the same and that’s why we have managed to accumulate an agile
+                <p>Iqtechway completely admits with the same and that’s why we have managed to accumulate an agile
                     workforce of WordPress developers who are ready to bestow state-of-the-services, while implementing
                     their par excellence practices.</p>
                 <p>Over the years, we have polished our self and carved our services to benefit the businesses all over
-                    the world. iQtechway is just not limited to a country or few, instead we render our WordPress
+                    the world. Iqtechway is just not limited to a country or few, instead we render our WordPress
                     Development services to a myriad of tech giants who are located in USA, Canada, Germany, Ukraine,
                     UK, Dubai, India, and our services are thriving to other flourishing corners of the world too.</p>
 
@@ -634,7 +634,7 @@
         <div class="homeServices-container container">
 
             <div class="homeServices-title">
-                <h2>iQtechway Delivers The Most Expeditious <span>PHP Development Services</span></h2>
+                <h2>Iqtechway Delivers The Most Expeditious <span>PHP Development Services</span></h2>
                 <p>The services delivered by our teams are designed in our inventory and are modifiable as per client’s
                     requirements. The complete development process is obstacle-free and you will get the access of your
                     project before or exactly as per the deadline assigned.
@@ -646,7 +646,7 @@
                         <img src="assets/Images/Hire-flutter/1.png" alt="software-development">
                     </div>
                     <h5>Bespoke PHP Web Development</h5>
-                    <p>iQtechway provides bespoke PHP development services so as to take you miles ahead of your business
+                    <p>Iqtechway provides bespoke PHP development services so as to take you miles ahead of your business
                         contraries. We allow our customers to hire PHP programmer India who are zealous to deliver. </p>
 
                     <div class="homeServices-overlay"></div>
@@ -667,7 +667,7 @@
                     </div>
                     <h5>Social Media Platform Development</h5>
                     <p>Social media is not just limited to the online communications. Instead it is the newer way to
-                        flourish ecommerce business. PHP experts at iQtechway deliver</p>
+                        flourish ecommerce business. PHP experts at Iqtechway deliver</p>
                     <div class="homeServices-overlay"></div>
 
                 </div>
@@ -677,7 +677,7 @@
                     </div>
                     <h5>Ecommerce Development Using PHP</h5>
                     <p>Apart from the web applications development using PHP, what we do is advanced ecommerce
-                        development. iQtechway couples its CMS solutions and ecommerce solutions to come up with the
+                        development. Iqtechway couples its CMS solutions and ecommerce solutions to come up with the
                         expected output. </p>
 
                     <div class="homeServices-overlay"></div>
@@ -709,7 +709,7 @@
 
         <div class="Development-container container">
             <div class="Development-title">
-                <h2>The Convincing Reasons To <span>Hire PHP Developers </span>India With iQtechway </h2>
+                <h2>The Convincing Reasons To <span>Hire PHP Developers </span>India With Iqtechway </h2>
                 <p>At IQ Tech, we try our level best to remain ahead of our competitors. And for the attainment of this,
                     we deliver something unique and worth appreciation. Here are some reasons why we are way too ahead
                     from other PHP development companies.
@@ -723,7 +723,7 @@
                     </div>
                     <h5>
                         Outstanding Technical Expertise</h5>
-                    <p>Handling a PHP project needs in-depth expertise and age old experience. Fortunately iQtechway has
+                    <p>Handling a PHP project needs in-depth expertise and age old experience. Fortunately Iqtechway has
                         the amalgamation of both. Our skillful PHP developers have core competency, polished knowhow,
                         great versatility, and better customer understanding, which are required to deliver you with
                         bespoke web solutions.</p>
@@ -743,7 +743,7 @@
                         <i class="fa-solid fa-check fa-2xl"></i>
                     </div>
                     <h5>Nimble PHP Development</h5>
-                    <p>With an excellent track record and brilliant performance, iQtechway delivers your project at the
+                    <p>With an excellent track record and brilliant performance, Iqtechway delivers your project at the
                         earliest. Our smart PHP developers are well aware with the PHP framework, so the projects we
                         deliver are- rich in accuracy, multifarious functionalities, agile interface, and appreciable
                         user centricity.</p>
@@ -753,7 +753,7 @@
                         <i class="fa-solid fa-check fa-2xl"></i>
                     </div>
                     <h5>No Bug Coding</h5>
-                    <p>The best part about having iQtechway as your PHP development partner is our bug free coding
+                    <p>The best part about having Iqtechway as your PHP development partner is our bug free coding
                         techniques. Despite our fast and easy processes, the coding we carry out is bug free. Before
                         handling the project a debugging session is conducted numerous times, so as to curtail the
                         possibilities of any bugs.</p>
@@ -763,7 +763,7 @@
                         <i class="fa-solid fa-check fa-2xl"></i>
                     </div>
                     <h5>On the Go Customer Assistance</h5>
-                    <p>You will find iQtechway by your side whenever you need us. We admit that there are chances that you
+                    <p>You will find Iqtechway by your side whenever you need us. We admit that there are chances that you
                         need some last-minute changes in the projects and for that we keep our doors open so that you
                         can contact us anytime. Just let us know what modifications you need, and our developers will do
                         the same.</p>
