--- a/hire-wordpress-developer.html
+++ b/hire-wordpress-developer.html
@@ -444,7 +444,7 @@
         <div class="banner-section">
             <span class="since">Since 2019</span>
             <h1>Hire <span> WordPress Developer</span></h1>
-            <p>iQtechway lets you hire the most erudite and accomplished WordPress Developers who have the abilities to
+            <p>Iqtechway lets you hire the most erudite and accomplished WordPress Developers who have the abilities to
                 deliver your WordPress project with a cutting edge.
             </p>
             <span class="del"><a href="index.html">Home </a> > Hire
@@ -463,7 +463,7 @@
         <h2>Hire Dedicated
             <span> WordPress Developers</span>
         </h2>
-        <p>At iQtechway, we pride ourselves on being a trailblazing force in the realm of WordPress development. With a dedicated team of seasoned developers, designers, and digital strategists, we offer unparalleled expertise and innovative solutions tailored to meet your unique needs</p>
+        <p>At Iqtechway, we pride ourselves on being a trailblazing force in the realm of WordPress development. With a dedicated team of seasoned developers, designers, and digital strategists, we offer unparalleled expertise and innovative solutions tailored to meet your unique needs</p>
     </div>
 
 
@@ -477,11 +477,11 @@
                     companies are completely relying on WordPress for their business. And it’s not news that having a
                     WordPress developer onboard who is equally proficient and dexterous, is a sure-shot way to climb the
                     staircase of huge business success.</p>
-                <p>iQtechway completely admits with the same and that’s why we have managed to accumulate an agile
+                <p>Iqtechway completely admits with the same and that’s why we have managed to accumulate an agile
                     workforce of WordPress developers who are ready to bestow state-of-the-services, while implementing
                     their par excellence practices.</p>
                 <p>Over the years, we have polished our self and carved our services to benefit the businesses all over
-                    the world. iQtechway is just not limited to a country or few, instead we render our WordPress
+                    the world. Iqtechway is just not limited to a country or few, instead we render our WordPress
                     Development services to a myriad of tech giants who are located in USA, Canada, Germany, Ukraine,
                     UK, Dubai, India, and our services are thriving to other flourishing corners of the world too.</p>
 
@@ -635,7 +635,7 @@
                 <h2>Hire The Most Dedicated And Exemplary
                     <span> WordPress Developers</span>
                 </h2>
-                <p>iQtechway has delivered hundreds of satisfactory WP projects while catering to the needs of thousands
+                <p>Iqtechway has delivered hundreds of satisfactory WP projects while catering to the needs of thousands
                     of clients across the globe. The WordPress developers hired with us have astonishing traits and can
                     bestow your company with the following mentioned below.
                 </p>
@@ -646,7 +646,7 @@
                         <img src="assets/Images/Hire-flutter/1.png" alt="software-development">
                     </div>
                     <h5>Comprehensive WordPress Project Development</h5>
-                    <p>iQtechway hold an age old experience in developing the WP websites. We can develop and customize
+                    <p>Iqtechway hold an age old experience in developing the WP websites. We can develop and customize
                         the web project as per the details assigned by you while enriching your website with tons of SEO
                         features.</p>
 
@@ -677,7 +677,7 @@
                         <img src="assets/Images/Hire-flutter/4.png" alt="software-development">
                     </div>
                     <h5>WordPress Theme Customization and Development</h5>
-                    <p>Hire iQtechway as WordPress Development Company can help you with the development of highly
+                    <p>Hire Iqtechway as WordPress Development Company can help you with the development of highly
                         appealing and responsive themes for your project. We apply a set of proven skills and practices
                         to develop top of the line WordPress themes for you. </p>
 
@@ -689,7 +689,7 @@
                     </div>
                     <h5>Development of WordPress Enterprise Applications</h5>
                     <p>To cope up with the rapid evolution of the technology, having a WordPress app is indispensable
-                        and with iQtechway you can accomplish everything without burning a hole in your pocket. </p>
+                        and with Iqtechway you can accomplish everything without burning a hole in your pocket. </p>
                     <div class="homeServices-overlay"></div>
 
                 </div>
@@ -698,7 +698,7 @@
                         <img src="assets/Images/Hire-flutter/5.png" alt="website-development">
                     </div>
                     <h5>WP Testing Services</h5>
-                    <p>iQtechway never fails to amaze its customers with its astounding services. And now we are available
+                    <p>Iqtechway never fails to amaze its customers with its astounding services. And now we are available
                         to test your existing and newly built WordPress projects.</p>
                     <div class="homeServices-overlay"></div>
 
@@ -735,7 +735,7 @@
                     </div>
                     <h5>Get in Touch for a Comprehensive Quotatione</h5>
                     <p>If you are looking for an eclectic project idea or you already have one, then feel free to
-                        contact us. Our teams are available to hear what you say and what you think. iQtechway has
+                        contact us. Our teams are available to hear what you say and what you think. Iqtechway has
                         deployed a plethora of communication channels for a better and thorough discussion.</p>
                 </div>
                 <div class="Development-boxs">
@@ -761,7 +761,7 @@
                         <i class="fa-solid fa-check fa-2xl"></i>
                     </div>
                     <h5>Readily Available Support and Best-in-class Maintenance</h5>
-                    <p>Despite our swift and dexterous services, there’s something why iQtechway is the preferred choice
+                    <p>Despite our swift and dexterous services, there’s something why Iqtechway is the preferred choice
                         of businesses when it comes to hiring a WordPress developer from India. These traits are -the
                         best after sales support and regular maintenance. We have 24*7 support panel that can assist you
                         whenever you need us.</p>
