--- a/hire.html
+++ b/hire.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
     <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -465,7 +465,7 @@
         <div class="hire-choosing-container container">
             <div class="hire-choosing-title">
                 <h2>Why Choose Iq <span>Techway</span></h2>
-                <p>At iQtechway, we believe in innovation that shapes the future. Established with a vision to empower businesses and individuals through cutting-edge technology, we are a pioneering force in the realm of digital solutions.</p>
+                <p>At Iqtechway, we believe in innovation that shapes the future. Established with a vision to empower businesses and individuals through cutting-edge technology, we are a pioneering force in the realm of digital solutions.</p>
             </div>
             <div class="hireChoose-box-container">
                 <div class="hireChoose-box">
@@ -601,7 +601,7 @@
         <div class="Development-container container">
             <div class="Development-title">
                 <h2>Our Vetting Process Finds You Best <span>Talented Developers</span> </h2>
-                <p>At iQtechway, we believe in innovation that shapes the future. Established with a vision to empower businesses and individuals through cutting-edge technology, we are a pioneering force in the realm of digital solutions.</p>
+                <p>At Iqtechway, we believe in innovation that shapes the future. Established with a vision to empower businesses and individuals through cutting-edge technology, we are a pioneering force in the realm of digital solutions.</p>
             </div>
             <div class="Development-content">
                 <div class="Development-boxs">
@@ -660,7 +660,7 @@
                     cost-effectiveness. Build your team up and down with ease based on the current development needs. We
                     help you avoid costly and lengthy recruitment processes and the paperwork hassle of on-site hiring.
                 </p>
-                <p>iQtechway is a leading IT staff augmentation agency in Ukraine with numerous staffing solutions on
+                <p>Iqtechway is a leading IT staff augmentation agency in Ukraine with numerous staffing solutions on
                     demand. Our clients get relevant staffing support without overpaying for redundant recruitment
                     stages. Remote developers will join the in-house development processes, assisting your staff in
                     desktop, mobile, or web product development, giving you the support and assistance you need right
