--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
     <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -491,13 +491,13 @@
         <div class="about-background"></div>
         <div class="about-section-container container">
             <div class="about-boxs">
-                <h2>Why <span>IQ Techway?</span> </h2>
-                <p style="font-size: 13px;">iQtechway Provides top notch Web and Mobile App Solutions, we develop
+                <h2>Why <span>Iqtechway?</span> </h2>
+                <p style="font-size: 13px;">Iqtechway Provides top notch Web and Mobile App Solutions, we develop
                     high quality and innovative
                     Web and Mobile Applications which can be easily stand out in competitive market. Our Developers Work
                     on latest and trending technologies and we always deliver requirement specific and user centric
                     applications as per The business needs.</p>
-                <p style="font-size: 13px;">iQtechway Provides top notch Web and Mobile App Solutions, we develop
+                <p style="font-size: 13px;">Iqtechway Provides top notch Web and Mobile App Solutions, we develop
                     high quality and innovative
                     Web and Mobile Applications which can be easily stand out in competitive market.</p>
 
@@ -1039,7 +1039,7 @@
             </div>
             <div class="services-content">
                 <h2>Our <span>Services</span> </h2>
-                <p>Iq Techway Provides top notch Web and Mobile App Solution.</p>
+                <p>Iqtechway Provides top notch Web and Mobile App Solution.</p>
                 <div class="services-content-boxs">
                     <div class="services-boxs-content">
                         <div class="service-image">
@@ -1101,7 +1101,7 @@
         <div class="proficient-container container">
             <div class="proficient-title">
                 <h2>Industries <span>We Serve</span></h2>
-                <p>At iQtechway, we take pride in providing cutting-edge software solutions tailored to meet the unique
+                <p>At Iqtechway, we take pride in providing cutting-edge software solutions tailored to meet the unique
                     needs of various industries. Our expertise extends across diverse sectors, enabling us to deliver
                     innovative and customized software services. We serve but are not limited to the following
                     industries:</p>
@@ -1191,12 +1191,12 @@
                 <img src="assets/Images/New/1.jpg" class="ab3" alt="about-images">
             </div>
             <div class="about-boxs">
-                <h2>About <br> <span>iQtechway </span> </h2>
-                <p>iQtechway Provides top notch Web and Mobile App Solutions, we develop high quality and innovative
+                <h2>About <br> <span>Iqtechway </span> </h2>
+                <p>Iqtechway Provides top notch Web and Mobile App Solutions, we develop high quality and innovative
                     Web and Mobile Applications which can be easily stand out in competitive market. Our Developers Work
                     on latest and trending technologies and we always deliver requirement specific and user centric
                     applications as per The business needs.</p>
-                <p>iQtechway Provides top notch Web and Mobile App Solutions, we develop high quality and innovative
+                <p>Iqtechway Provides top notch Web and Mobile App Solutions, we develop high quality and innovative
                     Web and Mobile Applications which can be easily stand out in competitive market.</p>
                 <p>We are one the Best Web Development companies in India, USA and at the same, we are one of the Best
                     Mobile App Development companies in India, USA. We work on different CMS and Frameworks like
@@ -1800,7 +1800,7 @@
 
     <section class="journy-section">
         <div class="journy-container text-center">
-            <h2>Journey of <span>IQ Techway</span></h2>
+            <h2>Journey of <span>Iqtechway</span></h2>
             <img src="assets/Images/New/road map.png" alt="Journy-image">
         </div>
     </section>
@@ -2040,7 +2040,7 @@
                 <div class="daily-sales-images">
                     <div class="industries-title-overlay"></div>
                     <h2>Our <span>Portfolio</span></h2>
-                    <p>Welcome to Iq Techway, where we showcase our diverse portfolio of groundbreaking software
+                    <p>Welcome to Iqtechway, where we showcase our diverse portfolio of groundbreaking software
                         solutions that have transformed businesses across various industries. Our commitment to
                         excellence and innovation drives us to create custom-tailored software that addresses unique
                         challenges and exceeds expectations.</p>
@@ -2092,7 +2092,7 @@
                     <span>1. Why should I opt for IQTechway as a software development service provider?</span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
-                <p>iQtechway stands as a distinguished CMMI Level 3 software and mobile app development company,
+                <p>Iqtechway stands as a distinguished CMMI Level 3 software and mobile app development company,
                     committed to setting high standards within the software development industry. With extensive
                     experience and proficiency, we offer a wide array of custom software development services adhering
                     to the latest technological norms, greatly benefiting numerous businesses. Our adept software
@@ -2138,7 +2138,7 @@
                     <span> 5. What different hiring models do you offer for software development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
-                <p>iQtechway is a client-focused software development firm that primarily provides two types of hiring
+                <p>Iqtechway is a client-focused software development firm that primarily provides two types of hiring
                     models for software engagement. <br> <br> <br>
                     <strong style="color: var(--white);">Dedicated Development Team/Staff Augmentation Model</strong>
                     <br>In this model, businesses can have access to a specialized dedicated team for the long-term by
