--- a/java.html
+++ b/java.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -462,7 +462,7 @@
 
     <div class="research-title mb-5">
         <h2>Java Website Development <span>Services</span> </h2>
-        <p>At iQtechway, we're dedicated to transforming your digital aspirations into innovative, user-centric, and cutting-edge Java-powered websites.</p>
+        <p>At Iqtechway, we're dedicated to transforming your digital aspirations into innovative, user-centric, and cutting-edge Java-powered websites.</p>
     </div>
 
 
@@ -481,9 +481,9 @@
                     types and sizes as well as complexities. Thus, they help create Java applications, both desktop and
                     web-based, that are sustainable and budget-friendly.</p>
 
-                <p>The hiring process at iQtechway is pretty simple and there are no hassles involved, thereby saving
+                <p>The hiring process at Iqtechway is pretty simple and there are no hassles involved, thereby saving
                     your valuable time at maximum. If you are interested to hire Java developers in Bangalore, here is
-                    how it goes when you hire with IQ Techway;</p>
+                    how it goes when you hire with Iqtechway;</p>
             </div>
             <div class="our-solution-form">
                 <div class="our-solution-heading">
@@ -624,7 +624,7 @@
                 <h2>We Adhere Services In
                     <span>Java Development</span>
                 </h2>
-                <p>Our best adherence in Java development, we offer a gamut of services. Iq Techway has developed high
+                <p>Our best adherence in Java development, we offer a gamut of services. Iqtechway has developed high
                     recital Java applications for web and mobile, based on customer endeavor stipulations.</p>
             </div>
             <div class="homeSrvices-content">
@@ -774,7 +774,7 @@
     <section class="website-features-section mt-5 mb-5">
         <div class="website-feature-container px-5">
             <div class="website-features-title text-center mb-4">
-                <h2>iQtechway Provides Creative Website Design features that create <br> a huge <span>Customer
+                <h2>Iqtechway Provides Creative Website Design features that create <br> a huge <span>Customer
                         engagement</span> </h2>
             </div>
             <div class="website-features-content">
@@ -817,7 +817,7 @@
                 </div>
                 <div class="research-content-boxs">
                     <h5>CODE REVIEW AND MAINTENANCE</h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
@@ -1018,11 +1018,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose iQtechway for Android App Development? </span>
+                    <span> Why choose Iqtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    iQtechway is the leading Android App Development Company that cares about the clients and their
+                    Iqtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
