--- a/joomla.html
+++ b/joomla.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -630,7 +630,7 @@
         <div class="homeServices-container container">
 
             <div class="homeServices-title">
-                <h2>iQtechway your <span>Joomla Development Partner </span></h2>
+                <h2>Iqtechway your <span>Joomla Development Partner </span></h2>
                 <p>Enlist teams of world-class developers, consultants, project managers and analysts who together render your vision in the physical world. With a deep focus on developing secure, highly-responsive and unique web solutions combined with a 100% success rate amongst clients spread across the globe, ensure the achievement of business objectives and digital success for your Joomla development initiative</p>
             </div>
             <div class="homeSrvices-content">
@@ -702,7 +702,7 @@
 
     <section class="guaranteed-section">
         <div class="guaranteed-container container">
-            <h2>Custom Joomla Web Development – <span>Hire IQ Techway</span> </h2>
+            <h2>Custom Joomla Web Development – <span>Hire Iqtechway</span> </h2>
             <p>Deploy the most popular Content Management System used to deliver the very best feature-rich and functional websites and portals. Leverage paramount skills and expertise in developing a wide range of Joomla solutions and applications to achieve your enterprise goals</p>
 
             <div class="guaranteed-list">
@@ -750,7 +750,7 @@
                 </div>
                 <div class="research-content-boxs">
                     <h5>Multilingual Support</h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
