--- a/lead-management.html
+++ b/lead-management.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEO Services Development Company - IQ Techway</title>
+    <title>SEO Services Development Company - Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
     <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -650,9 +650,9 @@
             <h2>Guaranteed SEO Results 100% Reputed as the <span>Best Tamilnadu SEO Company</span> </h2>
             <p>Top Page Organic Listing or earned Media Drives Traffic and Inspires Trust & Confidence among consumers
                 highlighting the importance the company has gained through popular merit</p>
-            <p>We at iQtechway, the leading provider of SEO Services in Tamilnadu believe - SEO is the understanding of
+            <p>We at Iqtechway, the leading provider of SEO Services in Tamilnadu believe - SEO is the understanding of
                 search engine technology, our SEO experts study search patterns by people and clearly define the target
-                audience and their search terms. iQtechway SEO specialists provide the following services:</p>
+                audience and their search terms. Iqtechway SEO specialists provide the following services:</p>
 
             <div class="guaranteed-list">
                 <ul>
@@ -863,7 +863,7 @@
                         <i class="fa-solid fa-check fa-2xl"></i>
                     </div>
                     <h5>Sales Automation</h5>
-                    <p>Iq Techway CRM enables businesses to automate their sales process, reducing the time and effort
+                    <p>Iqtechway CRM enables businesses to automate their sales process, reducing the time and effort
                         required to manage leads manually. The software comes with pre-built sales automation workflows
                         that can be customized to meet the specific needs of businesses. You can perform a lot more
                         using this Best Lead Management Software in Coimbatore. These workflows automate tasks such as
@@ -875,7 +875,7 @@
                         <i class="fa-solid fa-check fa-2xl"></i>
                     </div>
                     <h5>Integrations</h5>
-                    <p>Iq Techway CRM can be integrated with a wide range of third-party applications, enabling
+                    <p>Iqtechway CRM can be integrated with a wide range of third-party applications, enabling
                         businesses to streamline their workflow and improve productivity. The software integrates with
                         popular applications such as Google Calendar, Zapier, Facebook, and more. These integrations
                         allow businesses to automate tasks such as email campaigns, generatingleads, and appointment
@@ -887,7 +887,7 @@
                         <i class="fa-solid fa-check fa-2xl"></i>
                     </div>
                     <h5>Analytics and Reporting</h5>
-                    <p>Iq Techway CRM provides businesses with comprehensive analytics and reporting features that
+                    <p>Iqtechway CRM provides businesses with comprehensive analytics and reporting features that
                         enable them to monitor their lead management process’s performance. The software tracks key
                         metrics such as lead conversion rates, lead response time, and sales performance, providing
                         valuable insights into the effectiveness of the sales process. The reporting dashboard provides
@@ -899,7 +899,7 @@
                         <i class="fa-solid fa-check fa-2xl"></i>
                     </div>
                     <h5>Mobile App</h5>
-                    <p>Iq Techway CRM has a mobile app that enables businesses to manage their leads on the go. The app
+                    <p>Iqtechway CRM has a mobile app that enables businesses to manage their leads on the go. The app
                         provides all the features of the desktop version, allowing sales representatives to access their
                         leads, update their status, and communicate with prospects from anywhere at any time. The mobile
                         app is available for both iOS and Android devices, making it accessible to a wide range of
@@ -1004,11 +1004,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose iQtechway for Android App Development? </span>
+                    <span> Why choose Iqtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    iQtechway is the leading Android App Development Company that cares about the clients and their
+                    Iqtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
