--- a/mobile-app-development-company-in-coimbatore.html
+++ b/mobile-app-development-company-in-coimbatore.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -559,7 +559,7 @@
             <div class="weSpecialise-title text-center">
                 <h2>Mobile App Development Services <br> <span>Tailored for Your Business Needs</span> </h2>
 
-                <p>iQtechway is a leading, innovative mobile app development company that makes your business tap away
+                <p>Iqtechway is a leading, innovative mobile app development company that makes your business tap away
                     on
                     iPhone and Android devices. We are a pioneer in mobile app development services that help you launch
                     cutting-edge business applications. </p>
