--- a/nft-marketplace.html
+++ b/nft-marketplace.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -458,7 +458,7 @@
 
     <div class="research-title mb-5">
         <h2>NFT Marketplace <span>Service</span> </h2>
-        <p>Welcome to iQtechway, where innovation meets the future of digital assets. As a pioneering force in the realm of cutting-edge technology, we proudly present our revolutionary NFT (Non-Fungible Token) Marketplace.</p>
+        <p>Welcome to Iqtechway, where innovation meets the future of digital assets. As a pioneering force in the realm of cutting-edge technology, we proudly present our revolutionary NFT (Non-Fungible Token) Marketplace.</p>
     </div>
 
     <!-- What is NFT Start -->
@@ -835,7 +835,7 @@
                 </div>
                 <div class="research-content-boxs">
                     <h5>NFT SMART CONTRACT DEVELOPMENT AND AUDIT</h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
