--- a/on-demand-business.html
+++ b/on-demand-business.html
@@ -552,7 +552,7 @@
         <div class="banner-section">
             <span class="since">Since 2019</span>
             <h1>Top On-Demand App  <span> Development Company</span></h1>
-            <p>Transform your services into instant delights for your customers. Choose Iq Techway for exceptional expertise in industry-specific, feature-rich on-demand app development. Whether you're a startup or an enterprise, our on-demand apps are designed to scale effortlessly and ensure better business growth.</p>
+            <p>Transform your services into instant delights for your customers. Choose Iqtechway for exceptional expertise in industry-specific, feature-rich on-demand app development. Whether you're a startup or an enterprise, our on-demand apps are designed to scale effortlessly and ensure better business growth.</p>
             <span class="del"><a href="index.html">Home </a> > Top On-Demand App Development Company</span>-
 
         </div>
@@ -571,7 +571,7 @@
         <div class="focus-title">
             <h2>Dedicated Hiring 
                 <span>Models We Follow</span></h2>
-                <p>Hire skilled talents from Iq Techway who will ensure to work dedicatedly as your extended remote team and meet your diverse digital product development needs responsibly.</p>
+                <p>Hire skilled talents from Iqtechway who will ensure to work dedicatedly as your extended remote team and meet your diverse digital product development needs responsibly.</p>
         </div>
         <div class="focus-content">
             <div class="focus-content-boxs">
@@ -795,7 +795,7 @@
         <div class="hire-choosing-container container">
             <div class="hire-choosing-title">
                 <h2>Why Choose Iq <span>Techway</span></h2>
-                <p>At iQtechway, we believe in innovation that shapes the future. Established with a vision to empower businesses and individuals through cutting-edge technology, we are a pioneering force in the realm of digital solutions.</p>
+                <p>At Iqtechway, we believe in innovation that shapes the future. Established with a vision to empower businesses and individuals through cutting-edge technology, we are a pioneering force in the realm of digital solutions.</p>
             </div>
             <div class="hireChoose-box-container">
                 <div class="hireChoose-box">
