--- a/php.html
+++ b/php.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
     <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -466,7 +466,7 @@
 
     <div class="research-title mb-5">
         <h2>PHP <span>Development</span> </h2>
-        <p>At iQtechway, we pride ourselves on being a trailblazing PHP development company that stands at the forefront of technological evolution. </p>
+        <p>At Iqtechway, we pride ourselves on being a trailblazing PHP development company that stands at the forefront of technological evolution. </p>
     </div>
 
 
@@ -476,16 +476,16 @@
         <div class="our-solutions-container container">
             <div class="our-solutions-content">
 
-                <p>Welcome to iQtechway, your premier destination for professional PHP development services. We are a
+                <p>Welcome to Iqtechway, your premier destination for professional PHP development services. We are a
                     team of dedicated and experienced PHP developers committed to delivering innovative, scalable, and
                     high-performance solutions tailored to meet your unique business needs.</p>
 
-                <p>At iQtechway, we harness the power of PHP, a versatile and robust scripting language, to build
+                <p>At Iqtechway, we harness the power of PHP, a versatile and robust scripting language, to build
                     dynamic, secure, and feature-rich web applications. With our in-depth understanding of PHP
                     frameworks like Laravel, Symfony, CodeIgniter, and more, we craft customized solutions that propel
                     your business forward in the digital landscape.</p>
 
-                <h2>Why Choose iQtechway for <span>PHP Development Services?</span> </h2>
+                <h2>Why Choose Iqtechway for <span>PHP Development Services?</span> </h2>
                 <p>Expertise: Our team comprises proficient PHP developers with a wealth of experience in crafting
                     cutting-edge solutions using the latest PHP technologies and frameworks.</p>
                 <p>Custom Solutions: We understand that every business has unique requirements. That's why we focus on
@@ -736,7 +736,7 @@
 
     <div class="research-title mb-5">
         <h2>PHP Backend <span>Service</span> </h2>
-        <p>At iQtechway, we pride ourselves on being a trailblazing PHP development company that stands at the forefront of technological evolution. </p>
+        <p>At Iqtechway, we pride ourselves on being a trailblazing PHP development company that stands at the forefront of technological evolution. </p>
     </div>
 
 
@@ -762,7 +762,7 @@
                 <div class="research-content-boxs">
                     <h5>HIGH-QUALITY CODE
                     </h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
@@ -1071,11 +1071,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose iQtechway for Android App Development? </span>
+                    <span> Why choose Iqtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    iQtechway is the leading Android App Development Company that cares about the clients and their
+                    Iqtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
