--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
     <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -446,7 +446,7 @@
 
             <div class="banner-form-container">
                 <h1>Our Privacy and <span> Policy </span> </h1>
-                <p>At Iq Techway LLC, we are committed to protecting your privacy and providing a safe online experience
+                <p>At Iqtechway LLC, we are committed to protecting your privacy and providing a safe online experience
                     for all our users. This Privacy Policy outlines how we collect, use, disclose, and safeguard your
                     personal information when you access our website and use our services.</p>
                 <a href="contact.html" class="btn">
