--- a/product-development.html
+++ b/product-development.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -462,7 +462,7 @@
 
     <div class="research-title mb-5">
         <h2>Product Development <span>Service</span> </h2>
-        <p>At iQtechway, we transcend boundaries and redefine innovation. With a relentless pursuit of excellence, we spearhead the future of technology. </p>
+        <p>At Iqtechway, we transcend boundaries and redefine innovation. With a relentless pursuit of excellence, we spearhead the future of technology. </p>
     </div>
 
 
@@ -748,7 +748,7 @@
         <div class="homeServices-container container">
 
             <div class="homeServices-title">
-                <h2>Why Iq Techway For Your SaaS  <br>
+                <h2>Why Iqtechway For Your SaaS  <br>
                     <span>Product Development</span>
                 </h2>
 
@@ -935,7 +935,7 @@
                 <div class="research-content-boxs">
                     <h5>PROJECT SCOPING
                     </h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
