--- a/pwa.html
+++ b/pwa.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -462,7 +462,7 @@
 
     <div class="research-title mb-5">
         <h2><span>Progressive Web</span> App Service </h2>
-        <p>At iQtechway, we redefine digital experiences through cutting-edge technology, and our specialty lies in crafting Progressive Web Apps (PWAs) that transform the way users engage with your brand.</p>
+        <p>At Iqtechway, we redefine digital experiences through cutting-edge technology, and our specialty lies in crafting Progressive Web Apps (PWAs) that transform the way users engage with your brand.</p>
     </div>
 
 
@@ -685,7 +685,7 @@
                 is this infrastructure that makes us the best <a href="#">iPhone app development company in India.</a>
             </p>
 
-            <p>Connect with us for a range of consumer and enterprise applications. <a href="#"></a>iQtechway </a> , an
+            <p>Connect with us for a range of consumer and enterprise applications. <a href="#"></a>Iqtechway </a> , an
                 <a href="#">Progressive Web app development company in India</a> caters to a plethora of demands and app
                 flavors,
                 and dimensions, irrespective of industry verticals or end-use.
@@ -700,7 +700,7 @@
     <section class="next-big-tech1">
         <div class="next-big-title1 container">
             <h2>Development <span>Process </span> </h2>
-            <p>A reliable android application development company, iQtechway supervises the entire development process to
+            <p>A reliable android application development company, Iqtechway supervises the entire development process to
                 attain client satisfaction. The method includes research, design, development, management, security,
                 testing, fixing, and publishing the application. This is followed by the post-deployment services, which
                 include; bug fixing, updates, and modifications as per demand at the best price.</p>
@@ -733,7 +733,7 @@
                 </div>
                 <div class="research-content-boxs">
                     <h5>SMALL SIZE</h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
@@ -933,11 +933,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose iQtechway for Android App Development? </span>
+                    <span> Why choose Iqtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    iQtechway is the leading Android App Development Company that cares about the clients and their
+                    Iqtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
