--- a/seo-company-in-chennai.html
+++ b/seo-company-in-chennai.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -691,7 +691,7 @@
             <h2 class="mb-2" style="font-size: 16px; color: var(--color);">ON PAGE SEO services company in <span
                     style="color: white; border-bottom: 1px solid var(--color);">chennai, India</span></h2>
 
-            <p style="font-size: 13px; font-weight: 100;">Iq TechwayIncorporation SEO company in chennai, optimize your
+            <p style="font-size: 13px; font-weight: 100;">IqtechwayIncorporation SEO company in chennai, optimize your
                 marketing website with maximum visibility and conversation in search engines. We offer the fast,
                 effective, lowest cost SEO services in chennai. Get technical SEO consultant for your Digital
                 marketing website. Let us brand your business in online.</p>
@@ -710,7 +710,7 @@
                 best results, you need to target all the channels with the user landing up on your website.</p>
 
 
-            <p style="font-size: 13px; font-weight: 100;">Iq TechwayIncorporation SEO professionals make sure that this SEO
+            <p style="font-size: 13px; font-weight: 100;">IqtechwayIncorporation SEO professionals make sure that this SEO
                 part is so enhanced that it can boost the sales of the business that we are helping to market.</p>
             <h2 class="mb-2" style="font-size: 16px; color: var(--color);">Factors in On Page SEO</h2>
 
@@ -741,7 +741,7 @@
                 website that can be done by Link building in social networking sites. The great thing is all about
                 getting high quality backlinks from relevant websites this will results in website ranking and gaining
                 organic traffic. For a successful online branding is very important in Social networking sites. Branding
-                need a well-planned SEO strategic Iq TechwaySEO company in chennai works all possibilities to get as
+                need a well-planned SEO strategic IqtechwaySEO company in chennai works all possibilities to get as
                 many links to your website</p>
             <p style="font-size: 13px; font-weight: 100;">Off-page SEO Services help to get ranking in Search Engines
                 like Google, Yahoo and Bing. Link Development help your brand be recognized as an authority in Online
