--- a/seo-copy-writing.html
+++ b/seo-copy-writing.html
@@ -441,7 +441,7 @@
         <div class="banner-section">
             <span class="since">Since 2019</span>
             <h1 class="mb-3"><span>SEO Copy Writing </span> Management</h1>
-            <p class="mb-3">Within a short span of 10+ years, iQtechway has emerged as one of the topmost authentic
+            <p class="mb-3">Within a short span of 10+ years, Iqtechway has emerged as one of the topmost authentic
                 SEO SERVICES Development Companies in the world delivering solid groundbreaking solutions & services.
             </p>
             <img src="assets/Images/testimonial/client-img.png" alt="Banner-testimonial">
@@ -456,7 +456,7 @@
 
     <div class="research-title mb-5">
         <h2>SEO Copy Writing <span> Management</span> </h2>
-        <p>At iQtechway, we specialize in propelling businesses to the forefront of online success through our cutting-edge SEO copywriting management solutions. </p>
+        <p>At Iqtechway, we specialize in propelling businesses to the forefront of online success through our cutting-edge SEO copywriting management solutions. </p>
     </div>
 
     <section class="our-solutions-section ">
@@ -466,9 +466,9 @@
             <div class="our-solutions-content">
                 <h2>CONTENT WRITING COMPANY  <span>IN TAMILNADU</span> </h2>
                 <p>Content, when finely brewed like coffee, can get folks addicted to your business website, products and services. A catchy and creative web content can do wonders to expand your business online. Content writing undeniably, a powerful tool your business can use to keep its public face lively and attractive. Of the millions of web content available on the net; blog posts, articles and Ad copies that are being created, some get noticed better than the rest. Have you ever thought why? Nothing else but content writing does the magic! Words spell wonders owing to the fact that words are meant to spell wonders. You don’t have to get your grey hair worrying over whether you communicated your business smoothly because we are there at your service to take care of your business by communicating to the right person in the perfect tone.</p>
-                <p>Whether you need Content Writers for your newbie website or Content Editors to redesign your already existing website, iQtechway is there to fulfill all your content requirements. Our dedicated team consists of well-qualified and experienced content writers, researchers and editors. We help you create top ranked SEO web content, catchy slogans, sales-pulling brochures, attractive Ad copies, stunning case studies and other many more through our budget friendly SEO Copywriting services. You name what you need and we'll be there next second to provide you with it.</p>
+                <p>Whether you need Content Writers for your newbie website or Content Editors to redesign your already existing website, Iqtechway is there to fulfill all your content requirements. Our dedicated team consists of well-qualified and experienced content writers, researchers and editors. We help you create top ranked SEO web content, catchy slogans, sales-pulling brochures, attractive Ad copies, stunning case studies and other many more through our budget friendly SEO Copywriting services. You name what you need and we'll be there next second to provide you with it.</p>
 
-                <h2>4 Reasons why you should  <span>choose IQ Techway?</span></h2>
+                <h2>4 Reasons why you should  <span>choose Iqtechway?</span></h2>
 
                 <p>There's an old saying that “Never judge a book by its cover" but contradictorily, in this world full of blogs on the net, articles will be judged by their title. Not only should the content be described in a few words, but the title also should have a marketing function to please the readers to read the article till the end. You can have the best article on the web, but if is not catchy, nobody will read your impressive article. Thus, if you want to have the most effective blogs and the highest-level newsrooms, don't forget to get in touch with us, one of the leading SEO Content Writing Agency in Tamilnadu.</p>
             </div>
@@ -754,11 +754,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose iQtechway for Android App Development? </span>
+                    <span> Why choose Iqtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    iQtechway is the leading Android App Development Company that cares about the clients and their
+                    Iqtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
