--- a/seo.html
+++ b/seo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEO Services Development Company - IQ Techway</title>
+    <title>SEO Services Development Company - Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
     <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -447,7 +447,7 @@
         <div class="banner-section">
             <span class="since">SEO Services In India</span>
             <h1 class="mb-3"><span>Best SEO Company In India </span> With Top Rated SEO Experts</h1>
-            <p class="mb-3">Looking For SEO Services In India? iQtechway Technologies Is the best SEO Company In India,
+            <p class="mb-3">Looking For SEO Services In India? Iqtechway Technologies Is the best SEO Company In India,
                 And We Have Ample Reasons To Prove The Credibility Of Our SEO Services In India. </p>
             <img src="assets/Images/testimonial/client-img.png" alt="Banner-testimonial">
             <span class="del"><a href="index.html">Home </a>> SEO SERVICES development Company</span>-
@@ -463,7 +463,7 @@
         <h2 class="mb-4">SEO Services Company In India That Helps To <span>Get Ranking, Traffic, And Sales For
                 You!</span> </h2>
         <p>Start getting more qualified traffic, increased sales, and higher rankings on SERPs by requesting search
-            engine optimization services for your business website type from India’s leading SEO Company, iQtechway
+            engine optimization services for your business website type from India’s leading SEO Company, Iqtechway
             Technologies.</p>
 
         <h3 style="color: var(--color);">What Do You Get When You Hire Us As Your SEO Services Company In India</h3>
@@ -605,13 +605,13 @@
                 <p>SEO is Search Engine Driven activity to your site by accomplishing page 1 rankings in SERPs for
                     various keywords. The time of Organic Search and SEO is always showing signs of change from the
                     third party references to the more organized time of quality and relevancy. If you need to promote
-                    and advance your business online, iQtechway is the Best SEO Company in Coimbatore, which you can
+                    and advance your business online, Iqtechway is the Best SEO Company in Coimbatore, which you can
                     contact anytime you want.</p>
 
                 <h2>Looking for SEO Services <span>in India ?</span></h2>
 
                 <p>If you have a website yet its span is past the focused audiences at that point, so you are missing
-                    out on your business and focused targets. We at iQtechway, help you to be found on the internet and
+                    out on your business and focused targets. We at Iqtechway, help you to be found on the internet and
                     hence, make the best of your business. We offer the best SEO services in Coimbatore. Our SEO experts
                     work alongside the Digital Marketing specialists to make your brand value higher with proper
                     planning and analysis. We have helped various brands and businesses to rank higher in different
@@ -1095,10 +1095,10 @@
             <h2>Guaranteed SEO Results 100% Reputed as the <span>Best Tamilnadu SEO Company</span> </h2>
             <p>Top Page Organic Listing or earned Media Drives Traffic and Inspires Trust & Confidence among consumers
                 highlighting the importance the company has gained through popular merit</p>
-            <p>We at iQtechway, the leading provider of SEO Services in Tamilnadu believe - SEO is the understanding of
+            <p>We at Iqtechway, the leading provider of SEO Services in Tamilnadu believe - SEO is the understanding of
                 search engine technology, our SEO experts study search patterns by people and clearly define the target
                 audience and their search terms. <a href="https://iqtechway.com/"
-                    class="text-decoration-none text-danger ">iQtechway</a> SEO specialists provide the following
+                    class="text-decoration-none text-danger ">Iqtechway</a> SEO specialists provide the following
                 services:</p>
 
             <div class="guaranteed-list">
@@ -1290,7 +1290,7 @@
             <div class="staff-services-title">
                 <h2>The potential of SEO in <span>digital products sale </span> </h2>
                 <p>SEO for digital product online sales involves optimizing your website and content for higher rankings
-                    in search engine results. Being one of the leading SEO agencies in Coimbatore, iQtechway aids
+                    in search engine results. Being one of the leading SEO agencies in Coimbatore, Iqtechway aids
                     clients by using keywords in titles, meta descriptions, and content, and building quality backlinks
                     to improve SEO. We help digital product sellers succeed with smart strategies.</p>
 
@@ -1413,7 +1413,7 @@
                     <span> 3. What are the ways you measure SEO success? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
-                <p> As a SEO firm, in Coimbatore, iQtechway values the importance of traffic keyword rankings,
+                <p> As a SEO firm, in Coimbatore, Iqtechway values the importance of traffic keyword rankings,
                     conversion rate, bounce rate and time spent on the page. These metrics provide insights, into how
                     your SEO initiatives impact your websites performance. If you notice outcomes you can continue with
                     your existing strategy. Conversely if adjustments are required you have the flexibility to make
@@ -1474,7 +1474,7 @@
                         10. Is SEO reasonable in terms of pricing? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
-                <p>SEO cost varies based on factors like website size, industry competition, and SEO company experience. Despite the initial investment, SEO is cost-effective long-term due to increased organic traffic. iQtechway - a top-rated SEO company in Coimbatore helps its clients save money in the long run through a well-planned cost-effective strategy.</p>
+                <p>SEO cost varies based on factors like website size, industry competition, and SEO company experience. Despite the initial investment, SEO is cost-effective long-term due to increased organic traffic. Iqtechway - a top-rated SEO company in Coimbatore helps its clients save money in the long run through a well-planned cost-effective strategy.</p>
             </div>
         </div>
 
