--- a/shopify.html
+++ b/shopify.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -463,7 +463,7 @@
 
     <div class="research-title mb-5">
         <h2>Shopify <span>Development</span> </h2>
-        <p>At iQtechway, we're dedicated to transforming your eCommerce vision into reality. As a leading Shopify development company, we understand the dynamic landscape of online businesses and excel in crafting tailored solutions to elevate your brand.</p>
+        <p>At Iqtechway, we're dedicated to transforming your eCommerce vision into reality. As a leading Shopify development company, we understand the dynamic landscape of online businesses and excel in crafting tailored solutions to elevate your brand.</p>
     </div>
 
     <!-- Home Services start -->
@@ -694,7 +694,7 @@
                 </div>
                 <div class="research-content-boxs">
                     <h5>Integration with third-party apps</h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
