--- a/typeScript.html
+++ b/typeScript.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -457,7 +457,7 @@
 
     <div class="research-title mb-5">
         <h2>Typescript-get your digital  <span>solution</span> </h2>
-        <p>At iQtechway, we pride ourselves on being a dynamic force in the realm of digital solutions. With a relentless commitment to innovation and excellence, we stand at the forefront of technological advancement, offering cutting-edge solutions tailored to meet the diverse needs of modern businesses.</p>
+        <p>At Iqtechway, we pride ourselves on being a dynamic force in the realm of digital solutions. With a relentless commitment to innovation and excellence, we stand at the forefront of technological advancement, offering cutting-edge solutions tailored to meet the diverse needs of modern businesses.</p>
     </div>
 
     
@@ -471,10 +471,10 @@
 
                 <h2>Partner with Best TypeScript <span>Web Development Company</span> </h2>
 
-                <p>Creating an ideal web application in TypeScript seems magical by combining the greatest features of different programming languages. TypeScript is a typed language based on JavaScript that incorporates the best features of many languages, including Java, C++, etc. Hence, the TypeScript developers at Iq Techway make the complete development process less complicated and seamless.</p>
+                <p>Creating an ideal web application in TypeScript seems magical by combining the greatest features of different programming languages. TypeScript is a typed language based on JavaScript that incorporates the best features of many languages, including Java, C++, etc. Hence, the TypeScript developers at Iqtechway make the complete development process less complicated and seamless.</p>
 
                
-                <p>Iq Techway is a leading TypeScript development company that focuses on creating mobile and web-based applications. With the help of this incredible technology, Iq Techway delivers the finest user experience for the solutions your business wishes to deploy. We also provide a broad range of specialized TypeScript services to develop business-driven apps. Get in touch with us to receive unique and cost-effective TypeScript development services.
+                <p>Iqtechway is a leading TypeScript development company that focuses on creating mobile and web-based applications. With the help of this incredible technology, Iqtechway delivers the finest user experience for the solutions your business wishes to deploy. We also provide a broad range of specialized TypeScript services to develop business-driven apps. Get in touch with us to receive unique and cost-effective TypeScript development services.
 
                 </p>
             </div>
@@ -612,7 +612,7 @@
         <div class="focusing-section-container container">
             <div class="focus-title">
                 <h2>Leverage Our Proficient <span>TypeScript Development Services</span></h2>
-                <p>Utilize Iq Techway’s excellent and efficient TypeScript development services to grow your business and enhance its virtual presence. We are up for any challenge, whether you require more features for your software or a fully-fledged application.</p>
+                <p>Utilize Iqtechway’s excellent and efficient TypeScript development services to grow your business and enhance its virtual presence. We are up for any challenge, whether you require more features for your software or a fully-fledged application.</p>
             </div>
             <div class="focus-content">
                 <div class="focus-content-boxs">
@@ -688,7 +688,7 @@
       <div class="research-title container mb-5">
         <h2>Unique Features of Our  <span> TypeScript App Development </span>
         </h2>
-        <p>Experts at Iq Techway have the best technical expertise and skills in order to create the best solutions for our clients. For this reason, we can help you with web, and mobile application solutions integrated with specific features and functionalities, manage a large code base, and solutions combining different technologies. Many organizations prefer our TypeScript app development as we offer solutions with a wide range of features.</p>
+        <p>Experts at Iqtechway have the best technical expertise and skills in order to create the best solutions for our clients. For this reason, we can help you with web, and mobile application solutions integrated with specific features and functionalities, manage a large code base, and solutions combining different technologies. Many organizations prefer our TypeScript app development as we offer solutions with a wide range of features.</p>
     </div>
 
     <section class="hire-technologies-section">
@@ -725,7 +725,7 @@
             <div class="staff-services-title">
                 <h2>World-Class TypeScript <br> <span>Web App Development Company </span>
                 </h2>
-                <p>Iq Techway provides proficient TypeScript development services using the greatest development methodologies and tools to address troublesome business challenges and provide new exciting growth-promoting opportunities</p>
+                <p>Iqtechway provides proficient TypeScript development services using the greatest development methodologies and tools to address troublesome business challenges and provide new exciting growth-promoting opportunities</p>
             </div>
             <div class="staff-services-content">
                 <div class="staff-services-box">
@@ -777,7 +777,7 @@
                 <div class="research-content-boxs">
                     <h5>CODE STABILITY
                     </h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
@@ -976,11 +976,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose iQtechway for Android App Development? </span>
+                    <span> Why choose Iqtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    iQtechway is the leading Android App Development Company that cares about the clients and their
+                    Iqtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
