--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -461,7 +461,7 @@
 
     <div class="research-title mb-5">
         <h2>UX/UI Design <span>Service</span> </h2>
-        <p>At iQtechway, we're dedicated to crafting intuitive, elegant, and user-centric experiences that redefine how individuals interact with technology. Our passion lies in merging creativity with cutting-edge technology to deliver exceptional UX/UI design solutions that captivate, engage, and inspire.</p>
+        <p>At Iqtechway, we're dedicated to crafting intuitive, elegant, and user-centric experiences that redefine how individuals interact with technology. Our passion lies in merging creativity with cutting-edge technology to deliver exceptional UX/UI design solutions that captivate, engage, and inspire.</p>
     </div>
 
     
@@ -474,7 +474,7 @@
 
                 <h2>We create beautiful and intuitive <span> User Experience & User Interface Design</span></h2>
                 <p>A great user experience (UX) design is all about increasing engagement and customer satisfaction. Our dedicated UX UI design team ensures that your customers enjoy optimum ease while using your website or apps. From research to testing and from designing to incorporating, we analyse every stage with care and agility. We craft digital experiences for your customers, taking into account the trending website designs, features and technical functionalities. Our designers, developers and strategists collaborate to produce a cohesive idea, which drives your UX tactics.</p>
-                <p>At <a href="#"> IQ Techway</a>, you will come across highly intuitive and innovative methods, specially adapted for your customers. We focus on optimum usability, simplicity and interaction between your business and customers. Our UX and UI designers are keen in making the digital journey unique for your customers. Our services are research-oriented and scalable.</p>
+                <p>At <a href="#"> Iqtechway</a>, you will come across highly intuitive and innovative methods, specially adapted for your customers. We focus on optimum usability, simplicity and interaction between your business and customers. Our UX and UI designers are keen in making the digital journey unique for your customers. Our services are research-oriented and scalable.</p>
 
                 <div class="our-hire-flutter">
                     <img src="assets/Images/testimonial/upwork-logo.jpg" alt="team-photos">
@@ -724,7 +724,7 @@
                 </div>
                 <div class="research-content-boxs">
                     <h5>UI DESIGN</h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
