--- a/web-design-company-in-coimbatore.html
+++ b/web-design-company-in-coimbatore.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -788,7 +788,7 @@
     <section class="website-features-section mt-5 mb-5">
         <div class="website-feature-container px-3">
             <div class="website-features-title text-center mb-4">
-                <h2>iQtechway Provides Creative Website Design features that create <br> a huge <span>Customer engagement</span>  </h2>
+                <h2>Iqtechway Provides Creative Website Design features that create <br> a huge <span>Customer engagement</span>  </h2>
             </div>
             <div class="website-features-content">
                 <ul>
