--- a/wordpress.html
+++ b/wordpress.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
     <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -464,7 +464,7 @@
 
     <div class="research-title mb-5">
         <h2>Wordpress <span>Development</span> </h2>
-        <p>At iQtechway, we specialize in crafting tailored WordPress solutions that empower businesses to thrive in
+        <p>At Iqtechway, we specialize in crafting tailored WordPress solutions that empower businesses to thrive in
             the digital landscape. With a team of seasoned developers and designers, we harness the power of WordPress
             to create stunning, functional, and user-centric websites that resonate with your brand identity.</p>
     </div>
@@ -650,7 +650,7 @@
                 <div class="research-content-boxs">
                     <h5>SEO-Friendly
                     </h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
