--- a/clickFunnels.html
+++ b/clickFunnels.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
     <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -653,7 +653,7 @@
 
 
     <div class="research-title mb-5">
-        <h2>Why Choose ClickFunnels <br> <span> Developer from IQ Techway?</span> </h2>
+        <h2>Why Choose ClickFunnels <br> <span> Developer from Iqtechway?</span> </h2>
         <p>Next Big Technology has an in-house experienced Clickfunnels Development Team who are experts in ClickFunnel
             development and customization. Our ClickFunnels Developers are well experienced and skilled in developing
             landing pages to suit your business needs. Here are some reasons to hire Clickfunnel developer with us.</p>
@@ -766,7 +766,7 @@
                 </div>
                 <div class="research-content-boxs">
                     <h5>Pre-built Templates</h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
