--- a/drupal.html
+++ b/drupal.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -620,7 +620,7 @@
                 <div class="research-content-boxs">
                     <h5>Multisite capabilities
                     </h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
