--- a/erp-software.html
+++ b/erp-software.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
     <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -464,7 +464,7 @@
 
     <div class="research-title mb-5">
         <h2>Custom ERP Software <span>Development</span> </h2>
-        <p>At iQtechway, we specialize in crafting tailor-made ERP software that revolutionizes the way businesses operate. </p>
+        <p>At Iqtechway, we specialize in crafting tailor-made ERP software that revolutionizes the way businesses operate. </p>
     </div>
 
     <section class="our-solutions-section ">
@@ -1002,7 +1002,7 @@
                 <div class="research-content-boxs">
                     <h5>CUSTOMER SERVICE CONCERNS
                     </h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
