--- a/industries.html
+++ b/industries.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
     <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -473,7 +473,7 @@
             </p>
 
             <p>
-                At Iq Techway, we effectively extend our influence across diverse industries by attentively addressing
+                At Iqtechway, we effectively extend our influence across diverse industries by attentively addressing
                 their
                 unique needs, allowing us to develop and implement tailored solutions. We remain receptive to various
                 industry demands and are committed to implementing specialized solutions as needed.
