--- a/logo-and-brand-indentity.html
+++ b/logo-and-brand-indentity.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -459,7 +459,7 @@
 
     <div class="research-title mb-5">
         <h2> LOGO & BRANDING <span>Identity Service</span> </h2>
-        <p>At iQtechway, we pioneer cutting-edge solutions to elevate intelligence through innovative technology. Our identity rests upon a commitment to pushing the boundaries of possibility, driving transformation, and enabling businesses to thrive in an ever-evolving digital landscape.</p>
+        <p>At Iqtechway, we pioneer cutting-edge solutions to elevate intelligence through innovative technology. Our identity rests upon a commitment to pushing the boundaries of possibility, driving transformation, and enabling businesses to thrive in an ever-evolving digital landscape.</p>
     </div>
 
 
@@ -799,7 +799,7 @@
                 <div class="research-content-boxs">
                     <h5>FORMATION OF A LIST OF SPECIFICATIONS
                     </h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
