--- a/magento.html
+++ b/magento.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -462,7 +462,7 @@
 
     <div class="research-title mb-5">
         <h2>Magento <span>Development</span> </h2>
-        <p>iQtechway is a leading provider of comprehensive Magento development solutions tailored to meet the diverse needs of businesses worldwide. </p>
+        <p>Iqtechway is a leading provider of comprehensive Magento development solutions tailored to meet the diverse needs of businesses worldwide. </p>
     </div>
 
     <!-- Magento Content Section Start -->
@@ -738,7 +738,7 @@
                 </div>
                 <div class="research-content-boxs">
                     <h5>Extensive feature set</h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
