--- a/react-native.html
+++ b/react-native.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -461,7 +461,7 @@
 
     <div class="research-title mb-5">
         <h2><span>React Native  </span> solution</h2>
-        <p>At iQtechway, we are at the forefront of modern mobile development, harnessing the power of React Native to transform the way businesses craft their digital presence.</p>
+        <p>At Iqtechway, we are at the forefront of modern mobile development, harnessing the power of React Native to transform the way businesses craft their digital presence.</p>
     </div>
 
     
@@ -664,7 +664,7 @@
                 is this infrastructure that makes us the best <a href="#">iPhone app development company in India.</a>
             </p>
 
-            <p>Connect with us for a range of consumer and enterprise applications. <a href="#"></a>iQtechway </a> , an
+            <p>Connect with us for a range of consumer and enterprise applications. <a href="#"></a>Iqtechway </a> , an
                 <a href="#">React Native app development company in India</a> caters to a plethora of demands and app flavors,
                 and dimensions, irrespective of industry verticals or end-use.</p>
         </div>
@@ -695,7 +695,7 @@
                 </div>
                 <div class="research-content-boxs">
                     <h5>ONE-STOP SOLUTION</h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
@@ -896,11 +896,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose iQtechway for Android App Development? </span>
+                    <span> Why choose Iqtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    iQtechway is the leading Android App Development Company that cares about the clients and their
+                    Iqtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
