--- a/web-app.html
+++ b/web-app.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Techway</title>
+    <title>Iqtechway</title>
 
     <!--////////////////////// Favicon /////////////////// -->
      <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -808,8 +808,8 @@
     <section class="Development-Services">
         <div class="Development-container container">
             <div class="Development-title">
-                <h2>Why Iq Techway For Web   <span>App development?</span> </h2>
-                <p>Iq Techway is a leading Web App Development Company in Chennai, providing a competitive advantage by creating unique and user-friendly web applications</p>
+                <h2>Why Iqtechway For Web   <span>App development?</span> </h2>
+                <p>Iqtechway is a leading Web App Development Company in Chennai, providing a competitive advantage by creating unique and user-friendly web applications</p>
             </div>
             <div class="Development-content">
                 <div class="Development-boxs">
@@ -852,7 +852,7 @@
 
     <div class="research-title mb-5">
         <h2>Enterprise Web App <span>Development</span> </h2>
-        <p>At iQtechway, we're dedicated to revolutionizing the digital landscape for enterprises worldwide. With a relentless commitment to excellence, we specialize in crafting bespoke web applications that drive efficiency, productivity, and success.</p>
+        <p>At Iqtechway, we're dedicated to revolutionizing the digital landscape for enterprises worldwide. With a relentless commitment to excellence, we specialize in crafting bespoke web applications that drive efficiency, productivity, and success.</p>
     </div>
 
     <!-- rESERCH SECTION START -->
@@ -875,7 +875,7 @@
                 </div>
                 <div class="research-content-boxs">
                     <h5>ENHANCE YOUR CURRENT OPERATIONS</h5>
-                    <p>With iQtechway research & development services, you will be able to test your innovative
+                    <p>With Iqtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
